# mxgo-core

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DOCKER_SETUP.md  ENV_VARIABLES.md  README.md  add-new-tool.md  api.py  api_load_test.py  docker-compose.yml  dump.rdb  handle_configuration.py  locustfile.py  mcp.toml.example  model.config.example.toml  package-lock.json  package.json  pyproject.toml  run_api.py  system_stats.csv
.github/: dependabot.yml  pull_request_template.md
docker/: api_server.dockerfile  init-db.sh  scheduler.dockerfile  start-api.sh  start-scheduler.sh  start-worker.sh  worker.dockerfile
docusaurus-site/: docusaurus.config.ts  package-lock.json  package.json
email-worker/: package-lock.json  package.json  wrangler.toml
mxgo/: __init__.py  _logging.py  agent_types_extensions.py  api.py  auth.py  config.py  crud.py  dependencies.py  email_handles.py  email_sender.py  exceptions.py  instruction_resolver.py  reply_generation.py  request_context.py  response_generation.py  routed_litellm_model.py  scheduler_runner.py  schemas.py  suggestions.py  tasks.py  user.py  utils.py  validators.py  whitelist.py
mxtoai/: MCP_MIGRATION_GUIDE.md  __init__.py  _logging.py  agent_types_extensions.py  ai.py  api.py  auth.py  config.py  crud.py  dependencies.py  email.py  email_handles.py  email_provider_domains.txt  email_sender.py  exceptions.py  handle_configuration.py  instruction_resolver.py  models.py  request_context.py  routed_litellm_model.py  run_github_mcp_example.py  scheduled_task_executor.py  scheduler.py  scheduler_runner.py  schemas.py  suggestions.py  tasks.py  test_custom_mcp_client.py  user.py  utils.py  validators.py  whitelist.py
scripts/: generate_test_jwt.py  setup-local.sh  start-local.sh  validate-env.sh
test_files/: debit_note.xlsx
tests/: conftest.py  generate_test_jwt.py  test_api.py  test_api_integration.py  (+25 more)
(+129 files in other folders)
