[project]
name = "mxtoai"
version = "0.1.0"
description = "AI driven email assistant"
authors = [
    {name = "Satwik Kansal",email = "satwikkansal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.29.0,<0.30.0)",
    "logfire (>=3.8.1,<4.0.0)",
    "litellm[proxy] (>=1.63.14,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "boto3 (>=1.34.0,<2.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
