[project]
name = "mxtoai"
version = "0.1.0"
description = "AI driven email assistant"
authors = [
    {name = "Satwik Kansal",email = "satwikkansal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.29.0,<0.30.0)",
    "logfire (>=3.8.1,<4.0.0)",
    "litellm[proxy] (>=1.63.14,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "boto3 (>=1.34.0,<2.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "smolagents (>=1.12.0,<2.0.0)",
    "mammoth (>=1.9.0,<2.0.0)",
    "pdfminer-six (>=20240706,<20240707)",
    "python-pptx (>=1.0.2,<2.0.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "puremagic (>=1.28,<2.0)",
    "speechrecognition (>=3.14.2,<4.0.0)",
    "youtube-transcript-api (>=1.0.2,<2.0.0)",
    "ipdb (>=0.13.13,<0.14.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
autoflake = "^2.3.1"


[tool.poetry.group.test.dependencies]
locust = "^2.33.2"
psutil = "^7.0.0"

